Update 'audio-release010-test' component image to: quay.io/jdubrick-ai/audio-release010-test:8901f7ea0f7c35ddd335be72cf7fbaa13cb91bc5@sha256:010527b5ba571db3856c7cf612ebd7ba816af009a2b77c478696684f0b647b7f

--- a/components/audio-release010-test/overlays/development/deployment-patch.yaml
+++ b/components/audio-release010-test/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: audio-release010-test
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-ai-dev/ai-template-bootstrap-app:latest # use pre-built to bootstrap 
-        name: app-inference 
+        - image: quay.io/jdubrick-ai/audio-release010-test:8901f7ea0f7c35ddd335be72cf7fbaa13cb91bc5@sha256:010527b5ba571db3856c7cf612ebd7ba816af009a2b77c478696684f0b647b7f # use pre-built to bootstrap 
+          name: app-inference
